2012-11-30  Pierre Rossi  <pierre.rossi@gmail.com>

        [Qt] Fix zoomIn/zoomOut related regression.

        Reviewed by Simon Hausmann.

        Following r136235, fix a case of refactoring gone wrong.
        Implementing setTextSizeMultiplier in terms of
        setZoomFactor, and not the other way around.

        * WebCoreSupport/QWebFrameAdapter.cpp:
        (QWebFrameAdapter::setZoomFactor):
        * WidgetApi/qwebframe.cpp:
        (QWebFrame::setTextSizeMultiplier):

2012-11-30  Simon Hausmann  <simon.hausmann@digia.com>, Pierre Rossi  <pierre.rossi@digia.com>

        [Qt] Separate Qt WebKit into Qt WebKit and Qt WebKit Widgets
        https://bugs.webkit.org/show_bug.cgi?id=99314

        Reviewed by Tor Arne Vestbø.

        This big change separates QtWebKit into QtWebKit and QtWebKitWidgets as
        shared libraries.

        It's a big refactoring that mostly involves moving WebCore dependent
        code into QtWebKit and accessing it through exported QWebFrameAdapter
        and QWebPageAdapter classes.

        The QtWebKit version macros are now generated by syncqt and the version
        query functions have moved to qwebkitglobal.h, similar to qVersion() in
        qglobal.h.

        API wise qwebframe sees some small cleanups.

        * Api/qwebelement.h:
        * Api/qwebframe_p.h: Removed.
        * Api/qwebhistory.h:
        * Api/qwebkitglobal.cpp: Renamed from Source/WebKit/qt/Api/qwebkitversion.cpp.
        (qWebKitVersion):
        (qWebKitMajorVersion):
        (qWebKitMinorVersion):
        * Api/qwebkitglobal.h:
        * Api/qwebkitversion.h: Removed.
        * Api/qwebsecurityorigin.h:
        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::allowsAcceleratedCompositing):
        * WebCoreSupport/ChromeClientQt.h:
        (WebCore):
        (ChromeClientQt):
        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::frameRenderTreeDump):